--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,3 @@
 # Backend API Configuration
-# Specify the backend URL for the weather API service
-# For local development, use: http://localhost:8080
-# For production, replace with your deployed backend URL
+# For production, this would be replaced with deployed backend URL
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8080
